// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearing env 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "undefined
",
}
`;

exports[`env is printable 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  BLAH_BLAH: \\"yeah\\"
  woohoo: \\"yes\\"
}
",
}
`;

exports[`own keys of env object 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "[\\"BLAH_BLAH\\",\\"woohoo\\"]
",
}
`;

exports[`reading env 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "yeah
",
}
`;

exports[`setting env 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "yes
",
}
`;

exports[`setting env affects child processes 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "yes
",
}
`;
